## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(prefix)/$(DATADIRNAME)/locale"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(datadir)"\" 

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = mobius

mobius_SOURCES = \
	client.c  \
	client.h  \
	common.h  \
	list.c  \
	list.h  \
	message.c  \
	message.h  \
	socket.c  \
	socket.h  \
	udpclient.c  \
	udpserver.c  \
	udptunnel.c  \
	socks5.c  \
	socks5.h  \
	crypt.c  \
	crypt.h

mobius_LDFLAGS = 

mobius_LDADD = 

